[project]
name = "kadena-block-relayer-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "msgspec>=0.21.1",
    "tenacity>=9.1.4",
    "yarl>=1.23.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
